pushing new files

--- a/wp-content/themes/kingtec/assets/sass/app.scss
+++ b/wp-content/themes/kingtec/assets/sass/app.scss
@@ -231,6 +231,20 @@ body {
          }
       }
    }
+
+   .navbar-brand {
+
+      @media (max-width: $screen-sm-max) {
+         padding-top: 10px;
+      }
+      img {
+
+         @media (max-width: $screen-sm-max) {
+            width: auto;
+            height: 30px;
+         }
+      }
+   }
 }
 
 .navbar-nav li a {
