--- a/wp-content/themes/kingtec/assets/sass/app.scss
+++ b/wp-content/themes/kingtec/assets/sass/app.scss
@@ -1604,6 +1604,26 @@ footer {
 
 
 
+/* LOGIN SCREEN*/
+
+body.login {
+
+   background: #008064;
+
+   #login {
+
+      h1 {
+
+         a {
+            background-image: url('/images/ktlogin.png');
+         }
+      }
+
+
+   }
+
+}
+
 
 /* DEFAULT ROOTS */
 
