--- a/wp-content/themes/kingtec_en/assets/sass/app.scss
+++ b/wp-content/themes/kingtec_en/assets/sass/app.scss
@@ -245,6 +245,20 @@ body {
    }
 }
 
+   .navbar-brand {
+
+      @media (max-width: $screen-sm-max) {
+         padding-top: 10px;
+      }
+      img {
+
+         @media (max-width: $screen-sm-max) {
+            width: auto;
+            height: 30px;
+         }
+      }
+   }
+
 .navbar-nav li a {
  line-height: 50px;
  color: #000;
@@ -868,15 +882,23 @@ background-color: #fff;
 
    .text {
 
-      height: 100px;
+      height: 120px;
       box-shadow: 0px 6px 5px rgba(45, 150, 104, 0.3);
       padding-left: 30px;
       padding-right: 30px;    
       background-color: #fff;
 
-      @media (max-width: $screen-sm-max) {
+      @media (min-width: $screen-sm-min) {
          height: 130px;
       }
+
+      @media (min-width: $screen-lg-min) {
+         height: 120px;
+      }
+
+      // @media (max-width: $screen-sm-max) {
+      //    height: 130px;
+      // }
 
       p {
          padding-top: 30px;
